Improve maven build setup (#14)
* Improve maven test run setup
* Remove gradle reference

* add maven site setup
* add pitest mutation testing
* update scm url

Co-authored-by: Joseph Verron <joseph.verron@totalenergies.com>